--- a/hooks/build
+++ b/hooks/build
@@ -1,3 +1,2 @@
 #!/bin/sh
-docker build -t docker-customer-service .
-docker run -p 8080:8080 -t docker-customer-service
+docker build --build-arg VERSION_ARG="" -t docker-customer-service .
