--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.application.name=customer-service
 server.port=8081
+eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+eureka.instance.instance-id= ${spring.application.name}:${spring.application.instance_id:${random.value}}
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.hostname=localhost
